force-app/main/default/objects/Space__c/Space__c.object-meta.xml
<CustomObject>
    <description>A single Mirador Space (floor plan): grid cells, agent seats, openings and dividers, plus its saved camera direction. Belongs to a Place. Geometry is stored as a JSON blob in Geometry__c.</description>
    <label>Space</label>
    <nameField>
        <label>Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>