force-app/main/default/objects/Space__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the Space shows up in the live home/space views. Defaults to true; inactive spaces (or spaces under an inactive place) are hidden from those views.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>