force-app/main/default/objects/Space__c/fields/AppId__c.field-meta.xml
<CustomField>
    <fullName>AppId__c</fullName>
    <description>Client-generated id of the Space (Space.id, e.g. "space_xxx"). Persisted so the editor's own ids survive the round-trip; not the Salesforce record id.</description>
    <externalId>true</externalId>
    <label>App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>