force-app/main/default/objects/Space__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Saved camera rotation for the isometric view (Space.dir): 0..3, each step = 90 degrees.</description>
    <label>Direction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>