force-app/main/default/objects/Space__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <description>The Folder this Space belongs to. Master-detail: deleting the Folder deletes its Spaces.</description>
    <label>Folder</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>