force-app/main/default/objects/Space__c/fields/Geometry__c.field-meta.xml
<CustomField>
    <fullName>Geometry__c</fullName>
    <description>Serialized JSON geometry of the Space: { cells: [[c,r],...], seats: [{c,r,agentId}], openings: [{c,r,edge,kind}], dividers: [{c,r,edge}] }. Matches the SpacePlanData model 1:1 so it round-trips without conversion. Name and dir are stored in their own fields; everything else lives here.</description>
    <label>Geometry</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>