force-app/main/default/objects/Space__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <description>The Place (Lloc) this Space belongs to. Master-detail: deleting the Place deletes its Spaces.</description>
    <label>Place</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>