force-app/main/default/objects/Space__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Position of this Space within its Place's spaces array, so ordering survives the round-trip.</description>
    <label>Sort Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>